--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -62,8 +62,8 @@ CONFIG_NSS_DRV_PPTP_ENABLE=y
 CONFIG_NSS_DRV_PVXLAN_ENABLE=y
 CONFIG_NSS_DRV_SHAPER_ENABLE=y
 CONFIG_NSS_DRV_VXLAN_ENABLE=y
-CONFIG_NSS_FIRMWARE_VERSION_12_2=y
-# CONFIG_NSS_FIRMWARE_VERSION_12_5 is not set
+# CONFIG_NSS_FIRMWARE_VERSION_12_2=y
+CONFIG_NSS_FIRMWARE_VERSION_12_5=y
 CONFIG_PACKAGE_6rd=y
 CONFIG_PACKAGE_attr=m
 CONFIG_PACKAGE_avahi-dbus-daemon=m
@@ -240,6 +240,8 @@ CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-dockerman=m
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-homeproxy=y
+CONFIG_PACKAGE_luci-app-mihomo=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-package-manager=y
